# Ambient-Data-Analyst

./: .cursorrules  docker-compose.yml
backend/: .dockerignore  .env.example  .env.prod  .env.sandbox  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 8de34e9b7d89_create_tenants.py  ed1473ced949_tenant_domain_users.py
backend/app/: README.md  main.py
backend/app/api/: README.md  router.py
backend/app/api/internal/: __init__.py  routes.py
backend/app/api/v1/: __init__.py  router.py  routes.py
backend/app/api/v1/auth/: __init__.py  (+2 more)
backend/app/core/: README.md  __init__.py
backend/app/core/config/: settings.py
backend/app/core/errors/: __init__.py  exceptions.py  handlers.py
backend/app/core/logging/: __init__.py  setup.py
backend/app/core/middleware/: actor_context.py  request_id.py  tenant_enforcement.py
backend/app/core/security/: auth_service.py  password.py
backend/app/db/: README.md  base.py  session.py
backend/app/db/models/: __init__.py  tenant.py  user.py
backend/app/db/repos/: __init__.py  tenant_repo.py  user_repo.py
backend/app/features/: README.md
backend/app/shared/: README.md  __init__.py  constants.py
backend/app/shared/types/: __init__.py  ids.py
backend/app/shared/utils/: time.py
backend/docker/: Dockerfile  README.md
backend/scripts/: README.md
backend/scripts/maintenance/: __init__.py
backend/scripts/seed/: __init__.py  seed_tenants.py
backend/tests/: README.md
backend/tests/unit/: test_auth_routes.py  test_error_handlers.py  test_health.py
