[tool.poetry]
name = "ambient-data-analyst-backend"
version = "0.1.0"
description = "Ambient Data Analyst FastAPI backend"
authors = ["Excollo development <development@excollo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# API framework and server
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }

# Database + migrations (async-friendly)
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

